Fix SSE blueprint registration to prevent double /admin prefix
- Remove /admin url_prefix from activity_stream_bp registration
- Fixes SSE 404 errors in production where script_name already provides /admin
- Template URL construction now correctly resolves to /admin/tenant/ID/events
- Production deployment v205 resolves dashboard SSE connection issues

--- a/templates/tenant_dashboard.html
+++ b/templates/tenant_dashboard.html
@@ -738,7 +738,7 @@ function connectActivityStream() {
         }
 
         // Create new EventSource connection
-        const streamUrl = `{{ script_name }}/admin/tenant/{{ tenant.tenant_id }}/events`;
+        const streamUrl = `{{ script_name }}/tenant/{{ tenant.tenant_id }}/events`;
         eventSource = new EventSource(streamUrl);
 
         eventSource.onopen = function(e) {
