--- a/templates/edit_creative_format.html
+++ b/templates/edit_creative_format.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Edit Creative Format - {{ format.name }} - Scribd Sales Agent Admin{% endblock %}
+{% block title %}Edit Creative Format - {{ format.name }} - Sales Agent Admin{% endblock %}
 
 {% block content %}
 <div class="card">
