--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Accounts - Scribd Sales Agent Admin{% endblock %}
+{% block title %}Accounts - Sales Agent Admin{% endblock %}
 
 {% block content %}
 <div class="card">
