--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Settings - Scribd Sales Agent Admin{% endblock %}
+{% block title %}Settings - Sales Agent Admin{% endblock %}
 
 {% block content %}
 <div class="card">
