--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Add Product - Scribd Sales Agent Admin{% endblock %}
+{% block title %}Add Product - Sales Agent Admin{% endblock %}
 
 {% block content %}
 <div class="card">
