--- a/templates/create_tenant.html
+++ b/templates/create_tenant.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Create Account - Scribd Sales Agent Admin{% endblock %}
+{% block title %}Create Account - Sales Agent Admin{% endblock %}
 
 {% block content %}
 <div class="card" style="max-width: 600px; margin: 0 auto;">
