Remove broken 'View all' link for media buys
The link pointed to /operations which doesn't exist. Commented it out
with a TODO until a proper media buys list page is implemented.

--- a/templates/tenant_dashboard.html
+++ b/templates/tenant_dashboard.html
@@ -747,7 +747,8 @@
 <div class="media-buys-table">
     <div class="table-header">
         <h3>Recent Media Buys</h3>
-        <a href="/operations" class="view-all-link">View all →</a>
+        <!-- TODO: Implement view all media buys page -->
+        <!-- <a href="{{ script_name }}/tenant/{{ tenant.tenant_id }}/media-buys" class="view-all-link">View all →</a> -->
     </div>
 
     <table class="mini-table">
